fixed toc overlap
thanks to MiteshShah!

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -461,9 +461,12 @@ $button-size: 1.5rem;
 		@include prefix(12,0.5);
 		@include suffix(12,0.5);
 		position: absolute;
-		top: 5.5em;
+		top: 10em;
 		right: 0;
 		background-color: $white;
+		.image-wrap + #main & {
+			top: 27em;
+		}
 	}
 	header {
 		background: darken($textcolor, 10);
